--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header id="header">
+    <header id="    ">
       <div class="container">
         <section class="dados">
           <i class="fa-solid fa-shield-cat" style="color: rgb(96, 19, 96)"></i>
@@ -32,7 +32,7 @@
             <p>Saídas: R$ <span class="saida">0.00</span></p>
             <p>Total: R$ <span class="total">0.00</span></p>
           </div>
-          <div class="proximoItem">
+          <div class="proximo-item">
             <div class="div-descricao">
               <label for="descricao" class="descricao">Descrição:</label>
               <input type="text" id="descricao" />
