--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               </select>
             </div>
             <div class="div-botao">
-              <button id="incluir">Incluir</button>
+              <button id="incluir" onclick="adicionar()">Incluir</button>
             </div>
           </div>
           <div class="tabela">
